Fix mobile shift

--- a/src/app.css
+++ b/src/app.css
@@ -248,6 +248,7 @@ body.normal {
 
 body.about {
         background-color: #272b30;
+        font-size: 1.4rem;
 }
 
 body.normal .container1 {
